--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 html(lang="es")
-head
-	meta(charset="UTF-8")
-	title Documents
-body
-	h1 Hello World
-	
+  head
+    meta(charset="UTF-8")
+    title Documents
+    link(rel="stylesheet", href="dist/css/app.css")
+  body
+    h1 Hello World
+    
