agrego al readmi especificaciones de uso del template, ademas esta importada la estructura ITCSS y la estructura que se utilizara en PUG

--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -1,10 +1,5 @@
-@import "toolbox/colors",
-		"toolbox/fonts",
-		"toolbox/variables";
-@import "components/reset";
-	
-body{
-  background: linear-gradient(red, blue); 
-  height: 100vh;
-}
-//gfgfdghd
+@import "03-generic/pt-sans";
+@import "07-trumps/utilities";
+
+// Or selectively include components
+// @import
