--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -1,5 +1,8 @@
-@import "03-generic/pt-sans";
-@import "07-trumps/utilities";
+/* @import "03-generic/pt-sans";
+@import "07-trumps/utilities"; */
 
+html{
+  background: #ccc;
+}
 // Or selectively include components
 // @import
