agrega metodos para importar fuentes

--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -1,8 +1,17 @@
-/* @import "03-generic/pt-sans";
-@import "07-trumps/utilities"; */
+// =========================
+// 01.- Settings - import of global variables
+// =========================
+@import "01-settings/vars";
 
-html{
-  background: #ccc;
-}
+// =========================
+// 03.- Generic -import of font
+// =========================
+@import "03-generic/worksans";
+
+// =========================
+// 07.- Trumps - import of utilities
+// =========================
+@import "07-trumps/utilities";
+
 // Or selectively include components
 // @import
