--- a/source/scss/01-settings/_vars.scss
+++ b/source/scss/01-settings/_vars.scss
@@ -1,1 +1,37 @@
-$font-path: "../fonts/" !default;
+:root {
+  --g-color-first: #ff1e13;
+  --g-color-first-hover: #1d2258;
+  --g-color-first-pressed: #1d2258;
+  --g-color-second: #bc3e48;
+  --g-color-second-hover: #e43c6a;
+  --g-color-second-pressed: #a1284a; //
+  --g-color-third: #014592;
+  --g-color-third-hover: #014592;
+  --g-color-third-pressed: #014592;
+  --g-color-fourth: #00d2c3;
+  --g-color-fourth-hover: #01b6a9;
+  --g-color-fourth-pressed: #057069; //
+}
+
+//global colors
+$g-color-first: var(--g-color-first) !default; //dark-slate-blue
+$g-color-second: var(--g-color-second) !default; //warm-pink
+$g-color-third: var(--g-color-third) !default; //darkish-blue
+$g-color-fourth: var(--g-color-fourth) !default; //aquamarine
+
+$font-path: "../../source/fonts/" !default;
+
+// Media Query Ranges
+$small-screen-up: 601px !default;
+$medium-screen-up: 993px !default;
+$large-screen-up: 1201px !default;
+$small-screen: 600px !default;
+$medium-screen: 992px !default;
+$large-screen: 1200px !default;
+
+$medium-and-up: "only screen and (min-width : #{$small-screen-up})" !default;
+$large-and-up: "only screen and (min-width : #{$medium-screen-up})" !default;
+$extra-large-and-up: "only screen and (min-width : #{$large-screen-up})" !default;
+$small-and-down: "only screen and (max-width : #{$small-screen})" !default;
+$medium-and-down: "only screen and (max-width : #{$medium-screen})" !default;
+$medium-only: "only screen and (min-width : #{$small-screen-up}) and (max-width : #{$medium-screen})" !default;
