agree form website

--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -1,4 +1,9 @@
 // =========================
+// 0.- Settings - import of global variables
+// =========================
+@import "00-vendor/bootstrap/bootstrap.min";
+
+// =========================
 // 01.- Settings - import of global variables
 // =========================
 @import "01-settings/vars";
