--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -5,34 +5,20 @@ html(lang="es")
     title Documents
     link(rel="stylesheet", href="dist/css/app.css")
   body
-    nav(class="navbar navbar-expand-lg navbar-light bg-light")
-      a.navbar-brand(href="#") Navbar
-      button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
-        span.navbar-toggler-icon
+    include components/navbar.pug
+    include components/main.pug
+    include components/section-products.pug
 
-      .collapse.navbar-collapse#navbarSupportedContent
-        ul.navbar-nav.mr-auto
-          li.nav-item.active
-            a.nav-link(href="#") Home 
-              span.sr-only (current)
-          li.nav-item
-            a.nav-link(href="#") Link
-          li.nav-item.dropdown
-            a.nav-link.dropdown-toggle(href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Dropdown
-            .dropdown-menu(aria-labelledby="navbarDropdown")
-              a.dropdown-item(href="#") Action
-              a.dropdown-item(href="#") Another action
-              .dropdown-divider
-              a.dropdown-item(href="#") Something else here
-
-          li(nav-item)
-            a.nav-link(disabled href="#" tabindex="-1" aria-disabled="true") Disabled
-
-        form.form-inline.my-2.my-lg-0
-          input.form-control.mr-sm-2(type="search" placeholder="Search" aria-label="Search")
-          button.btn.btn-outline-success.my-2.my-sm-0(type="submit") Search
-
+    section.c-section-about
+      img(src="dist/img/nacimos-back.png", alt="")
+      .c-section-title
+        img(src="dist/img/title-nacimos.svg", alt="")
+        p ...En una finca llena de hermosa vegetación y una cálida familia, que nos enseñó a trabajar la tierra y definió nuestra pasión en el café, un sentimiento que queremos transmitir a través de todas nuestras actividades.
+            
+          
     script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous")
+    script(src="dist/js/slick.js")
+    script(src="dist/js/main.js")
     
