create page home

--- a/source/scss/06-components/_section-about.scss
+++ b/source/scss/06-components/_section-about.scss
@@ -9,4 +9,14 @@
     top: 0;
     left: 0;
   }
+
+  &--black{
+    background: #1C1713;
+  }
+
+  &__description{
+    max-height: 6rem;
+    margin-bottom: 2rem;
+    overflow-y: scroll;
+  }
 }
