--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -34,6 +34,10 @@
 @import "06-components/section-products";
 @import "06-components/section-about";
 @import "06-components/section-title";
+@import "06-components/section-map";
+@import "06-components/section-testimonials";
+@import "06-components/section_clients";
+@import "06-components/footer";
 
 // =========================
 // 07.- Trumps - import of utilities
