create page product

--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -38,6 +38,8 @@
 @import "06-components/section-testimonials";
 @import "06-components/section_clients";
 @import "06-components/footer";
+@import "06-components/banner-products";
+@import "06-components/presentations";
 
 // =========================
 // 07.- Trumps - import of utilities
