--- a/source/scss/06-components/_banner-products.scss
+++ b/source/scss/06-components/_banner-products.scss
@@ -1,3 +1,24 @@
 .c-banner-products{
-  
+  position: relative;
+
+  img{
+    width: 100%;
+    height: 30rem;
+    object-fit: cover;
+    object-position: top center;
+  }
+  &__title{
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: rgba(black, .8);
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 1rem 3rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: white;
+  }
 }
