--- a/source/templates/our-coffee.pug
+++ b/source/templates/our-coffee.pug
@@ -5,7 +5,7 @@ html(lang="es")
     title Documents
     link(rel="stylesheet", href="dist/css/app.css")
   body
-    include components/navbar.pug
+    include components/navbar-1.pug
     main.c-banner-products
       img(src="dist/img/banner-coffee.png", alt="")
       .c-banner-products__title
@@ -15,44 +15,44 @@ html(lang="es")
         .row
           .col-12
             h2 presentaciones
-          .col.col-sm-6.col-md-3
+          .col-6.col-sm-6.col-md-3
             a(href="#!").c-presentations__item
               img(src="dist/img/coffee-1.png", alt="")
               p Café kere'ma Premium
-          .col.col-sm-6.col-md-3
+          .col-6.col-sm-6.col-md-3
             a(href="#!").c-presentations__item
               img(src="dist/img/coffee-2.png", alt="")
               p Café kere'ma Especial
-          .col.col-sm-6.col-md-3
+          .col-6.col-sm-6.col-md-3
             a(href="#!").c-presentations__item
               img(src="dist/img/coffee-3.png", alt="")
               p Café kere'ma Natural
-          .col.col-sm-6.col-md-3
+          .col-6.col-sm-6.col-md-3
             a(href="#!").c-presentations__item
               img(src="dist/img/coffee-3.png", alt="")
               p Café kere'ma Honey
-    section
+    section.c-presentations
       .container
         .row
           .col-12
-            .c-presentation__main
+            .c-presentations__main
               img(src="dist/img/coffee-complete-1.png", alt="")
               .c-presentation__main__description
-                img(src="dist/img/coffee-complete-1-title", alt="")
+                img(src="dist/img/coffee-complete-1-title.png", alt="")
                 p Nuestro clásico, Perfil de tueste; de sabores a caramelo, pasta de cacao, chocolate y flores, cuerpo medio, acidez balanceada con notas cítricas.
                 ul
                   li Origen: Finca La Torre - Villa Rica
                   li Proceso: Lavado
                   li Altitud: 1400 a 1800 m.s.n.m.
                   li Variedad: Caturra, Geisha, Catimor y Catuai.
-              .c-presentation__main__price
-                h4 Presentaciones
-                .c-presentation__main__price-item
-                  span 250gr.
-                  span s/.20
-                .c-presentation__main__price-item
-                  span 1kg.
-                  span s/.50
+                .c-presentations__main__price
+                  h4 Presentaciones
+                  .c-presentations__main__price-item
+                    span 250gr.
+                    span s/.20
+                  .c-presentations__main__price-item
+                    span 1kg.
+                    span s/.50
           .col-12
             a(href="#!").c-presentation__button regresar
 
