agree page coffee

--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -40,6 +40,7 @@
 @import "06-components/footer";
 @import "06-components/banner-products";
 @import "06-components/presentations";
+@import "06-components/button";
 
 // =========================
 // 07.- Trumps - import of utilities
