--- a/source/scss/06-components/_presentations.scss
+++ b/source/scss/06-components/_presentations.scss
@@ -25,6 +25,7 @@
     border: 2px solid white;
     padding: 2rem;
     border-radius: 2rem;
+    
     img{
       flex-shrink: 0;
       width: 30%;
@@ -33,7 +34,58 @@
       
     }
     &__description{
-      width: 50%;
+      padding: 0 3rem;
+      img{  
+        display: block;
+        width: 45%;
+        margin: 0 auto;
+      }
+
+      ul{
+        list-style: none;
+        padding-left: 0;
+      }
+    }
+    &__price{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+
+      h4{
+        font-size: 1.4rem;
+        color: #FF6300;
+        width: 100%;
+      }
+      &-item{
+        width: 50%;
+        span:first-child{
+          display: block;
+        }
+        span:last-child{
+          display: block;
+          box-shadow: 0 0 0 2px #FF6300;
+          padding: .5rem 1rem;
+          margin: 1rem  0 .5rem;
+          width: 80%;
+
+          border-radius: .5rem;
+        }
+      }
+    }
+  }
+  
+  &__button{
+    display: inline-block;
+    margin-top: 2rem;
+    box-shadow: 0 0 0 2px white;
+    padding: .5rem 1rem;
+    border-radius: .5rem;
+    color: #FF6300;
+    background: #ff6300;
+    color: white;
+
+    &:hover{
+      text-decoration: none;
     }
   }
 }
