--- a/source/templates/our-coffee.pug
+++ b/source/templates/our-coffee.pug
@@ -37,16 +37,16 @@ html(lang="es")
           .col-12
             .c-presentations__main
               img(src="dist/img/coffee-complete-1.png", alt="")
-              .c-presentation__main__description
+              .c-presentations__main__description
                 img(src="dist/img/coffee-complete-1-title.png", alt="")
                 p Nuestro clásico, Perfil de tueste; de sabores a caramelo, pasta de cacao, chocolate y flores, cuerpo medio, acidez balanceada con notas cítricas.
                 ul
-                  li Origen: Finca La Torre - Villa Rica
-                  li Proceso: Lavado
-                  li Altitud: 1400 a 1800 m.s.n.m.
-                  li Variedad: Caturra, Geisha, Catimor y Catuai.
+                  li <b>Origen:</b> Finca La Torre - Villa Rica
+                  li <b>Proceso:</b> Lavado
+                  li <b>Altitud:</b> 1400 a 1800 m.s.n.m.
+                  li <b>Variedad:</b> Caturra, Geisha, Catimor y Catuai.
                 .c-presentations__main__price
-                  h4 Presentaciones
+                  h4 Presentaciones:
                   .c-presentations__main__price-item
                     span 250gr.
                     span s/.20
@@ -54,7 +54,7 @@ html(lang="es")
                     span 1kg.
                     span s/.50
           .col-12
-            a(href="#!").c-presentation__button regresar
+            a(href="#!").c-presentations__button regresar
 
     include components/footer.pug
 
