--- a/source/templates/our-coffee.pug
+++ b/source/templates/our-coffee.pug
@@ -55,7 +55,8 @@ html(lang="es")
                     span s/.50
           .col-12
             a(href="#!").c-presentations__button regresar
-
+            
+    include components/section-clients.pug
     include components/footer.pug
 
     script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous")
