--- a/source/scss/06-components/_presentations.scss
+++ b/source/scss/06-components/_presentations.scss
@@ -40,6 +40,7 @@
       width: 30%;
       margin-right: 10%;
       margin-left: 10%;
+      object-fit: contain;
       
     }
     &__description{
@@ -64,12 +65,19 @@
         font-size: 1.4rem;
         color: #FF6300;
         width: 100%;
+        margin-bottom: 2rem;
       }
       &-item{
         width: 50%;
+
+        &.small{
+          width: 33.33%;
+        }
+
         span:first-child{
           display: block;
         }
+
         span:last-child{
           display: block;
           box-shadow: 0 0 0 2px #FF6300;
