agree page contact

--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -42,6 +42,7 @@
 @import "06-components/presentations";
 @import "06-components/button";
 @import "06-components/gallery";
+@import "06-components/contact";
 
 // =========================
 // 07.- Trumps - import of utilities
