--- a/source/templates/components/section-products.pug
+++ b/source/templates/components/section-products.pug
@@ -11,8 +11,22 @@ section.c-section-products
             a(href="#!") Ver más
       div
         .c-section-products__slide
-          img(src="dist/img/coffee_work.png", alt="")
+          img(src="dist/img/coffee_methods.png", alt="")
           .c-section-products__slide__description
             span PRODUCTOS
-            h4 Nuestros<br>trabajo
+            h4 Nuestros<br>métodos
+            a(href="#!") Ver más
+      div
+        .c-section-products__slide
+          img(src="dist/img/coffee_chocolate.png", alt="")
+          .c-section-products__slide__description
+            span PRODUCTOS
+            h4 Nuestros<br>chocolates
+            a(href="#!") Ver más
+      div
+        .c-section-products__slide
+          img(src="dist/img/coffee_coffee.png", alt="")
+          .c-section-products__slide__description
+            span PRODUCTOS
+            h4 Nuestros<br>cafés
             a(href="#!") Ver más
