--- a/source/templates/components/navbar.pug
+++ b/source/templates/components/navbar.pug
@@ -1,38 +1,34 @@
 nav.c-navbar.navbar.navbar-expand-lg
   button.navbar-toggler(type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation")
     span.navbar-toggler-icon
-  a(href="#!").c-navbar__logo
+  a(href="index.html").c-navbar__logo
     img(src="dist/img/logo.svg", alt="")
-  .collapse.navbar-collapse#navbarSupportedContent
-    ul.navbar-nav.mr-auto
-      li.nav-item
-        a.nav-link(href="#!")
-          i.icon-facebook
-      li.nav-item
-        a.nav-link(href="#!")
-          i.icon-instagram
-      li.nav-item
-        a.nav-link(href="#!")
-          i.icon-whatsapp
+  .container
+    .collapse.navbar-collapse#navbarSupportedContent
+      ul.navbar-nav.mr-auto
+        li.nav-item
+          a.nav-link(href="#!")
+            i.icon-facebook
+        li.nav-item
+          a.nav-link(href="#!")
+            i.icon-instagram
+        li.nav-item
+          a.nav-link(href="#!")
+            i.icon-whatsapp
 
-    .my-2.my-lg-0
-      ul.navbar-nav
-        li.nav-item.dropdown
-          a.nav-link.dropdown-toggle(href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Menú
-          .dropdown-menu.dropdown-menu-right(aria-labelledby="navbarDropdown")
-            a.dropdown-item(href="#") Inicio
-            .dropdown-divider
-            a.dropdown-item(href="#") Productos +
-            .dropdown-divider
-            a.dropdown-item(href="#") Cafés
-            a.dropdown-item(href="#") Chocolates
-            a.dropdown-item(href="#") Métodos
-            a.dropdown-item(href="#") Trabajo
-            .dropdown-divider
-            a.dropdown-item(href="#") Galería +
-            .dropdown-divider
-            a.dropdown-item(href="#") Producción
-            a.dropdown-item(href="#") Proceso
-            a.dropdown-item(href="#") Consumidores
-            .dropdown-divider
-            a.dropdown-item(href="#") Contacto
+      .my-2.my-lg-0
+        ul.navbar-nav
+          li.nav-item.dropdown
+            a.nav-link.dropdown-toggle(href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Menú
+            .dropdown-menu.dropdown-menu-right(aria-labelledby="navbarDropdown").c-navbar__dropdown
+              a.dropdown-item(href="index.html") Inicio
+              a.dropdown-item(href="#") Productos +
+              a.dropdown-item(href="our-coffee.html").white Cafés
+              a.dropdown-item(href="our-chocolate.html").white Chocolates
+              a.dropdown-item(href="our-method.html").white Métodos
+              a.dropdown-item(href="our-work.html").white Trabajo
+              a.dropdown-item(href="#") Galería +
+              a.dropdown-item(href="gallery.html").white Producción
+              a.dropdown-item(href="gallery-1.html").white Proceso
+              a.dropdown-item(href="gallery-2.html").white Consumidores
+              a.dropdown-item(href="contact.html") Contacto
