--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -4,6 +4,7 @@
 @import "00-vendor/bootstrap/bootstrap.min";
 @import "00-vendor/slick/slick";
 @import "00-vendor/slick/slick-theme";
+@import "00-vendor/animate/animate";
 
 // =========================
 // 01.- Settings - import of global variables
