--- a/source/templates/components/coffee-presentation.pug
+++ b/source/templates/components/coffee-presentation.pug
@@ -1,6 +1,6 @@
 section.c-presentations
   .container
-    .row
+    .row.wow.fadeInDown
       .col-12
         h2 presentaciones
       .col-6.col-sm-6.col-md-3
