--- a/source/templates/components/main.pug
+++ b/source/templates/components/main.pug
@@ -1,15 +1,15 @@
-main.c-main
+main.c-main.wow.fadeInDown
   .slider.single-item
     div
       .c-main__slide
         img(src="dist/img/banner_principal.png", alt="")
         .container
-          .row
+          .row.wow.fadeInDown
             .col-12.col-md-6.offset-md-6
               h3 “EL CAFÉ QUE<br><b>UNE</b> A LAS<br>PERSONAS”
     div
       .c-main__slide
-        img(src="dist/img/banner_principal-1.png", alt="")
+        img(src="dist/img/banner_principa-1.png", alt="")
     div
       .c-main__slide
         img(src="dist/img/banner_principal-2.png", alt="")
