--- a/source/templates/components/section-clients.pug
+++ b/source/templates/components/section-clients.pug
@@ -1,4 +1,4 @@
-section.c-section-clients
+section.c-section-clients.wow.fadeInDown
   h2 miembro embajador de:
   .container
     .c-section-clients__image
