--- a/source/templates/components/section-products.pug
+++ b/source/templates/components/section-products.pug
@@ -4,29 +4,29 @@ section.c-section-products
     .c-slider-principal.slider
       div
         .c-section-products__slide
-          img(src="dist/img/coffee_work.png", alt="")
-          .c-section-products__slide__description
+          img(src="dist/img/coffee_work.png", alt="").wow.fadeInLeft
+          .c-section-products__slide__description.wow.fadeInRight
             span PRODUCTOS
             h4 Nuestros<br>trabajo
             a(href="#!") Ver más
       div
         .c-section-products__slide
-          img(src="dist/img/coffee_methods.png", alt="")
-          .c-section-products__slide__description
+          img(src="dist/img/coffee_methods.png", alt="").wow.fadeInLeft
+          .c-section-products__slide__description.wow.fadeInRight
             span PRODUCTOS
             h4 Nuestros<br>métodos
             a(href="#!") Ver más
       div
         .c-section-products__slide
-          img(src="dist/img/coffee_chocolate.png", alt="")
-          .c-section-products__slide__description
+          img(src="dist/img/coffee_chocolate.png", alt="").wow.fadeInLeft
+          .c-section-products__slide__description.wow.fadeInRight
             span PRODUCTOS
             h4 Nuestros<br>chocolates
             a(href="#!") Ver más
       div
         .c-section-products__slide
-          img(src="dist/img/coffee_coffee.png", alt="")
-          .c-section-products__slide__description
+          img(src="dist/img/coffee_coffe.png", alt="").wow.fadeInLeft
+          .c-section-products__slide__description.wow.fadeInRight
             span PRODUCTOS
             h4 Nuestros<br>cafés
             a(href="#!") Ver más
