--- a/source/templates/components/section-testimonial.pug
+++ b/source/templates/components/section-testimonial.pug
@@ -7,7 +7,7 @@ section.c-section-testimonials
 
         .c-slider-testimonial.slider
           div
-            .c-section-testimonials__slide
+            .c-section-testimonials__slide.wow.fadeInDown
               img(src="dist/img/testimonial.png", alt="")
               span Gerita Vásquez
 
@@ -15,7 +15,7 @@ section.c-section-testimonials
                 p “Me encantó conocer desde el sembrado de sus cafés, así como también el hecho que sea ecoamigable es muy importante, su sabor es realmente indescriptible. buenísimo!!”
                 img(src="dist/img/testimonial_icon.png", alt="")
           div
-            .c-section-testimonials__slide
+            .c-section-testimonials__slide.wow.fadeInDown
               img(src="dist/img/testimonial.png", alt="")
               span Gerita Vásquez
 
