--- a/source/templates/contact.pug
+++ b/source/templates/contact.pug
@@ -9,7 +9,7 @@ html(lang="es")
     main.c-banner-products
       img(src="dist/img/banner-work.png", alt="")
       .c-banner-products__title
-        h1 nuestro<br>trabajo
+        h1.wow.fadeInDown nuestro<br>trabajo
 
 
     section.c-presentations.c-contact-back
@@ -18,7 +18,7 @@ html(lang="es")
         .row
           .col-12
             .c-contact
-              .c-contact__description
+              .c-contact__description.wow.fadeInLeft
                 img(src="dist/img/title-contact.png", alt="")
                 h3 Informacion<br>de contacto
                 p 983 467 917
@@ -28,7 +28,7 @@ html(lang="es")
                 p Carretera el Oconal - Villa Rica (0.2 km)
                 h3 Horario
                 p 09:00 A 19:00
-              .c-contact__form
+              .c-contact__form.wow.fadeInRight
                 form(action="#!")
                   .c-contact__form-group
                     img(src="dist/img/contact-form-title.png", alt="")
@@ -59,5 +59,6 @@ html(lang="es")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous")
     script(src="dist/js/slick.js")
+    script(src="dist/js/wow.js")
     script(src="dist/js/main.js")
     
