--- a/source/templates/our-chocolate-1.pug
+++ b/source/templates/our-chocolate-1.pug
@@ -8,11 +8,11 @@ html(lang="es")
     include components/navbar-1.pug
     main.c-banner-products
       img(src="dist/img/banner-chocolate.png", alt="")
-      .c-banner-products__title
+      .c-banner-products__title.wow.fadeInDown
         h1 nuestros<br>chocolates
     section.c-presentations
       .container
-        .row.justify-content-center
+        .row.justify-content-center.wow.fadeInDown
           .col-12
             h2 presentaciones
           .col-6.col-sm-6.col-md-3
@@ -30,8 +30,8 @@ html(lang="es")
         .row
           .col-12
             .c-presentations__main
-              img(src="dist/img/chocolate-complete-2.png", alt="")
-              .c-presentations__main__description
+              img(src="dist/img/chocolate-complete-2.png", alt="").wow.fadeInLeft
+              .c-presentations__main__description.wow.fadeInRight
                 img(src="dist/img/chocolate-complete-2-title.png", alt="")
                 p Es el resultado de tostar, moler y refinar al grano de cacao hasta obtener la pasta de cacao, sin preservantes. ideal para preparar chocolate de taza.
                 ul
@@ -50,7 +50,7 @@ html(lang="es")
                   .c-presentations__main__price-item.small
                     span 125gr.
                     span s/.16
-            a(href="#!").c-presentations__button regresar
+            a(href="index.html").c-presentations__button regresar
             
     include components/section-clients.pug
     include components/footer.pug
@@ -59,5 +59,6 @@ html(lang="es")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous")
     script(src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous")
     script(src="dist/js/slick.js")
+    script(src="dist/js/wow.js")
     script(src="dist/js/main.js")
     
