--- a/source/scss/06-components/_main.scss
+++ b/source/scss/06-components/_main.scss
@@ -33,6 +33,7 @@
       left: 0;
       width: 100%;
       height: 100%;
+      display: block;
       object-fit: cover;
       object-position: left center;
 
