--- a/source/templates/components/footer.pug
+++ b/source/templates/components/footer.pug
@@ -4,16 +4,16 @@ footer.c-footer
       .col-12.col-lg-6
         .c-footer__newsletter
           img(src="dist/img/logo.svg", alt="")
-          .c-footer__newsletter__form
+          .c-footer__newsletter__form.wow.fadeInDown
             p Únete a la lista para recibir promociones especiales y novedades
             form(action="#!")
               button Suscríbete
               input(type="text" placeholder="email@example.com")
-        ul.c-footer__contact
+        ul.c-footer__contact.wow.fadeInLeft
           li D. Carretera el Oconal - Villa Rica(0.2 km) - Perú
           li T. 983467917 - 974891025
           li E. info@keremaperu.com
-      .col-12.col-lg-6 
+      .col-12.col-lg-6.wow.fadeInRight
         h4 Obten las últimas noticias
         .c-footer__socials
           a(href="#!")
