--- a/source/templates/components/section-gallery.pug
+++ b/source/templates/components/section-gallery.pug
@@ -4,15 +4,22 @@ section.c-section-products
     .c-slider-gallery.slider
       div
         .c-section-products__slide
-          img(src="dist/img/logo_coffee.png", alt="")
-          .c-section-products__slide__description
+          img(src="dist/img/logo_coffee.png", alt="").wow.fadeInLeft
+          .c-section-products__slide__description.wow.fadeInRight
             span GALERIA
             h4 Consumi<br>dores
             a(href="#!") Ver más
       div
         .c-section-products__slide
-          img(src="dist/img/coffee_work.png", alt="")
-          .c-section-products__slide__description
-            span PRODUCTOS
-            h4 Nuestros<br>trabajo
+          img(src="dist/img/logo_progress.png", alt="").wow.fadeInLeft
+          .c-section-products__slide__description.wow.fadeInRight
+            span GALERIA
+            h4 proceso de<br>calidad
+            a(href="#!") Ver más
+      div
+        .c-section-products__slide
+          img(src="dist/img/logo_plants.png", alt="").wow.fadeInLeft
+          .c-section-products__slide__description.wow.fadeInRight
+            span GALERIA
+            h4 áreas de<br>producción<br>de café
             a(href="#!") Ver más
