--- a/source/templates/components/section-gallery.pug
+++ b/source/templates/components/section-gallery.pug
@@ -8,18 +8,18 @@ section.c-section-products
           .c-section-products__slide__description.wow.fadeInRight
             span GALERIA
             h4 Consumi<br>dores
-            a(href="#!") Ver más
+            a(href="gallery-2.html") Ver más
       div
         .c-section-products__slide
           img(src="dist/img/logo_progress.png", alt="").wow.fadeInLeft
           .c-section-products__slide__description.wow.fadeInRight
             span GALERIA
             h4 proceso de<br>calidad
-            a(href="#!") Ver más
+            a(href="gallery-1.html") Ver más
       div
         .c-section-products__slide
           img(src="dist/img/logo_plants.png", alt="").wow.fadeInLeft
           .c-section-products__slide__description.wow.fadeInRight
             span GALERIA
             h4 áreas de<br>producción<br>de café
-            a(href="#!") Ver más
+            a(href="gallery.html") Ver más
