--- a/source/templates/components/section-products.pug
+++ b/source/templates/components/section-products.pug
@@ -8,25 +8,25 @@ section.c-section-products
           .c-section-products__slide__description.wow.fadeInRight
             span PRODUCTOS
             h4 Nuestros<br>trabajo
-            a(href="#!") Ver más
+            a(href="our-work.html") Ver más
       div
         .c-section-products__slide
           img(src="dist/img/coffee_methods.png", alt="").wow.fadeInLeft
           .c-section-products__slide__description.wow.fadeInRight
             span PRODUCTOS
             h4 Nuestros<br>métodos
-            a(href="#!") Ver más
+            a(href="our-method.html") Ver más
       div
         .c-section-products__slide
           img(src="dist/img/coffee_chocolate.png", alt="").wow.fadeInLeft
           .c-section-products__slide__description.wow.fadeInRight
             span PRODUCTOS
             h4 Nuestros<br>chocolates
-            a(href="#!") Ver más
+            a(href="our-chocolate.html") Ver más
       div
         .c-section-products__slide
           img(src="dist/img/coffee_coffe.png", alt="").wow.fadeInLeft
           .c-section-products__slide__description.wow.fadeInRight
             span PRODUCTOS
             h4 Nuestros<br>cafés
-            a(href="#!") Ver más
+            a(href="our-coffee.html") Ver más
