agree  new images in 6x format

--- a/source/scss/06-components/_footer.scss
+++ b/source/scss/06-components/_footer.scss
@@ -31,10 +31,6 @@
     p{
       color: #D6BD7C;
       margin: 1rem 0;
-
-      @media only screen and (min-width: 992px){
-        margin: 0;
-      }
     }
     &__form form{
       display: flex;
@@ -82,5 +78,8 @@
     &:hover{
       color: #FF6300;
     }
+  }
+  .red{
+    color: #FF6300;
   }
 }
