--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -16,6 +16,7 @@
 // =========================
 @import "03-generic/worksans";
 @import "03-generic/icons";
+@import "03-generic/steagal";
 
 // =========================
 // 04.- Elements - import of elements
