--- a/source/templates/components/coffee-presentation.pug
+++ b/source/templates/components/coffee-presentation.pug
@@ -6,16 +6,16 @@ section.c-presentations
       .col-6.col-sm-6.col-md-3
         a(href="our-coffee.html").c-presentations__item
           img(src="dist/img/coffee-1.png", alt="")
-          p Café kere'ma Premium
+          p Café KERE'Ma Premium
       .col-6.col-sm-6.col-md-3
         a(href="our-coffee-1.html").c-presentations__item
           img(src="dist/img/coffee-2.png", alt="")
-          p Café kere'ma Especial
+          p Café KERE'Ma Especial
       .col-6.col-sm-6.col-md-3
         a(href="our-coffee-2.html").c-presentations__item
           img(src="dist/img/coffee-3.png", alt="")
-          p Café kere'ma Natural
+          p Café KERE'Ma Natural
       .col-6.col-sm-6.col-md-3
         a(href="our-coffee-3.html").c-presentations__item
           img(src="dist/img/coffee-3.png", alt="")
-          p Café kere'ma Honey
+          p Café KERE'Ma Honey
