--- a/source/templates/components/footer.pug
+++ b/source/templates/components/footer.pug
@@ -25,4 +25,4 @@ footer.c-footer
           a(href="#!")
             i.icon-whatsapp
         p 2019 hecho con ♥ por 
-          a(href="#!") Altiplánika Marketing
+          a(href="#!").red Altiplánika Marketing
