--- a/source/templates/our-chocolate.pug
+++ b/source/templates/our-chocolate.pug
@@ -18,11 +18,11 @@ html(lang="es")
           .col-6.col-sm-6.col-md-3
             a(href="our-chocolate.html").c-presentations__item
               img(src="dist/img/chocolate-1.png", alt="")
-              p Pasta de Cacao Kere'ma
+              p Pasta de Cacao KERE'Ma
           .col-6.col-sm-6.col-md-3
             a(href="our-chocolate-1.html").c-presentations__item
               img(src="dist/img/chocolate-2.png", alt="")
-              p Nibs de Cacao Kere'ma
+              p Nibs de Cacao KERE'Ma
 
 
     section.c-presentations
