--- a/source/scss/06-components/_section-about.scss
+++ b/source/scss/06-components/_section-about.scss
@@ -18,5 +18,25 @@
     max-height: 6rem;
     margin-bottom: 2rem;
     overflow-y: scroll;
+
+    
   }
+}
+
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+	background-color: transparent;
+}
+
+::-webkit-scrollbar
+{
+	width: 7px;
+	background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb
+{
+  background-color: #FF6300;
+  border-radius: 3rem;
 }
