--- a/source/scss/06-components/_section_clients.scss
+++ b/source/scss/06-components/_section_clients.scss
@@ -19,6 +19,7 @@
   h2{
     text-align: center;
     text-transform: uppercase;
+    color: #969696;
     font-size: 1rem;
     margin-bottom: 2rem;
     margin-top: 2rem;
