--- a/source/templates/our-method-3.pug
+++ b/source/templates/our-method-3.pug
@@ -18,19 +18,19 @@ html(lang="es")
           .col-6.col-sm-6.col-md-3
             a(href="our-method.html").c-presentations__item
               img(src="dist/img/metodo-1.png", alt="")
-              p Café kere'ma Premium
+              p Café KERE'Ma Premium
           .col-6.col-sm-6.col-md-3
             a(href="our-method-1.html").c-presentations__item
               img(src="dist/img/metodo-2.png", alt="")
-              p Café kere'ma Especial
+              p Café KERE'Ma Especial
           .col-6.col-sm-6.col-md-3
             a(href="our-method-2.html").c-presentations__item
               img(src="dist/img/metodo-3.png", alt="")
-              p Café kere'ma Natural
+              p Café KERE'Ma Natural
           .col-6.col-sm-6.col-md-3
             a(href="our-method-3.html").c-presentations__item
               img(src="dist/img/metodo-3.png", alt="")
-              p Café kere'ma Honey
+              p Café KERE'Ma Honey
     section.c-presentations
       .container
         .row
